// Vitest Snapshot v1

exports[`plugins/tsLoader > should set include/exclude 1`] = `
{
  "module": {
    "rules": [
      {
        "exclude": [
          "src/**/*.js",
        ],
        "include": [
          {
            "and": [
              "<ROOT>/packages/builder/builder-webpack-provider",
              {
                "not": /node_modules/,
              },
            ],
          },
          "<ROOT>/packages/builder/builder-webpack-provider/src/runtime/core-js-entry.js",
          "src/**/*.ts",
        ],
        "test": /\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
        "use": [
          {
            "loader": "<ROOT>/node_modules/<PNPM_INNER>/babel-loader/lib/index.js",
            "options": {
              "presets": [
                [
                  "<ROOT>/packages/cli/babel-preset-app/dist/js/node/index.js",
                  {
                    "appDirectory": "<ROOT>/packages/builder/builder-webpack-provider",
                    "metaName": "modern-js",
                    "target": "client",
                    "useBuiltIns": "entry",
                    "useTsLoader": true,
                    "userBabelConfig": undefined,
                  },
                ],
              ],
            },
          },
          {
            "loader": "<ROOT>/node_modules/<PNPM_INNER>/ts-loader/index.js",
            "options": {
              "allowTsInNodeModules": true,
              "compilerOptions": {
                "module": 99,
                "target": 99,
              },
              "transpileOnly": true,
            },
          },
        ],
      },
    ],
  },
}
`;

exports[`plugins/tsLoader > should set ts-loader 1`] = `
{
  "module": {
    "rules": [
      {
        "include": [
          {
            "and": [
              "<ROOT>/packages/builder/builder-webpack-provider",
              {
                "not": /node_modules/,
              },
            ],
          },
          "<ROOT>/packages/builder/builder-webpack-provider/src/runtime/core-js-entry.js",
        ],
        "test": /\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
        "use": [
          {
            "loader": "<ROOT>/node_modules/<PNPM_INNER>/babel-loader/lib/index.js",
            "options": {
              "presets": [
                [
                  "<ROOT>/packages/cli/babel-preset-app/dist/js/node/index.js",
                  {
                    "appDirectory": "<ROOT>/packages/builder/builder-webpack-provider",
                    "metaName": "modern-js",
                    "target": "client",
                    "useBuiltIns": "entry",
                    "useTsLoader": true,
                    "userBabelConfig": undefined,
                  },
                ],
              ],
            },
          },
          {
            "loader": "<ROOT>/node_modules/<PNPM_INNER>/ts-loader/index.js",
            "options": {
              "allowTsInNodeModules": true,
              "compilerOptions": {
                "module": 99,
                "target": 99,
              },
              "transpileOnly": true,
            },
          },
        ],
      },
    ],
  },
}
`;
